# python-meetup

./: README.md  pyproject.toml
mcps/: menus.json  menus.py  recetas.json  recetas.py
